fix content header spacing

--- a/app/styles/ember-appuniversum/_c-content-header.scss
+++ b/app/styles/ember-appuniversum/_c-content-header.scss
@@ -69,7 +69,7 @@
 .au-c-content-header__bottom {
   @include au-font-size($au-h4,1);
   font-family: $au-font;
-  display: block;
+  display: inline-block;
   max-width: 60%;
 
   @include mq(medium) {
